--- a/src/KnowledgeBase.API/KnowledgeBase.API.csproj
+++ b/src/KnowledgeBase.API/KnowledgeBase.API.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.12.1" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
     <PackageReference Include="Qdrant.Client" Version="1.14.1" />
+    <PackageReference Include="QuestPDF" Version="2025.5.1" />
     <PackageReference Include="Scalar.AspNetCore" Version="2.5.3" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.12.1" />
   </ItemGroup>
