重置密码相关

--- a/src/KnowledgeBase.API/appsettings.json
+++ b/src/KnowledgeBase.API/appsettings.json
@@ -10,6 +10,18 @@
     "ExpiryMinutes": 60,
     "RefreshTokenExpiryDays": 7
   },
+  "EmailSettings": {
+    "SmtpHost": "smtp.gmail.com",
+    "SmtpPort": 587,
+    "SmtpUsername": "your-email@gmail.com",
+    "SmtpPassword": "your-app-password",
+    "EnableSsl": true,
+    "FromEmail": "noreply@aiknowledgebase.com",
+    "FromName": "AI知识库"
+  },
+  "Frontend": {
+    "Url": "http://localhost:5173"
+  },
   "OpenAI": {
     "ApiBaseUrl":"your-openai-api-base-url",
     "ApiKey": "your-openai-api-key"
